#92 bugfix: Non loaded pictures or to big pictures, too long description

--- a/Itan.Application.UI/src/styles.scss
+++ b/Itan.Application.UI/src/styles.scss
@@ -11,3 +11,9 @@ html{
   height: 256px;
   width: 256px;
 }
+
+.hide-with-ellipsis{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
